combined all images in one folder and adjusted source in html

--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
 
 <body>
   <div id="hacked-1" hidden="hidden">
-    <img id='img1' src="virus-1.gif" alt="virus">
-    <img id='img2' src="virus-2.gif" alt="virus">
-    <img id='img3' src="virus-3.gif" alt="virus">
-    <img id='img4' src="virus-4.gif" alt="virus">
-    <img id='img5' src="virus-5.gif" alt="virus">
-    <img id='img6' src="virus-1.gif" alt="virus">
-    <img id='img7' src="virus-2.gif" alt="virus">
-    <img id='img8' src="virus-3.gif" alt="virus">
-    <img id='img9' src="virus-4.gif" alt="virus">
-    <img id='img10' src="virus-5.gif" alt="virus">
+    <img id='img1' src="Images/virus-1.gif" alt="virus">
+    <img id='img2' src="Images/virus-2.gif" alt="virus">
+    <img id='img3' src="Images/virus-3.gif" alt="virus">
+    <img id='img4' src="Images/virus-4.gif" alt="virus">
+    <img id='img5' src="Images/virus-5.gif" alt="virus">
+    <img id='img6' src="Images/virus-1.gif" alt="virus">
+    <img id='img7' src="Images/virus-2.gif" alt="virus">
+    <img id='img8' src="Images/virus-3.gif" alt="virus">
+    <img id='img9' src="Images/virus-4.gif" alt="virus">
+    <img id='img10' src="Images/virus-5.gif" alt="virus">
   </div>
 
-
-
-  <p><a href="https://giphy.com/gifs/future-careers-uniblog-12W5Sg2koWYnwA"></a></p>
   <!-- Keep this div with the class card! -->
   <div class="card">
-    <img class="main-image" src="Cookies_meme.png" alt="symbol" />
+    <img class="main-image" src="Images/Cookies_meme.png" alt="symbol" />
     <!-- Write your markup in here! Feel free to delete the title and the text! -->
     <h1>Accept cookies?</h1>
     <p>This website uses cookies. We use cookies to personalise content and ads, to provide social media features and
@@ -68,7 +65,7 @@
   <div id="Sure" hidden="hidden">
     <h1> Confirm you are a human</h1>
     <p>To continue, type the characters you see in the picture. </p>
-    <img class="captcha-image" src="Captcha.jpg" alt="captcha" />
+    <img class="captcha-image" src="Images/Captcha.jpg" alt="captcha" />
 
     <form method="GET" id="form">
       <input type="text" name='answer' id="answer">
